--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -6,7 +6,7 @@
 @homepageURL    https://github.com/sapondanaisriwan/AdashimaaTube
 @supportURL     https://github.com/sapondanaisriwan/AdashimaaTube/issues
 @updateURL      https://userstyles.world/api/style/6944.user.css
-@version        1.8.7
+@version        1.8.8
 @license        MIT
 @preprocessor   stylus
 
@@ -1068,6 +1068,11 @@ Support me: https://ko-fi.com/sapondanaisriwan
     /* REVERT WATCH PAGE */
     #meta-contents[hidden],
     #info-contents[hidden] {
+        display: block i;
+    }
+
+    /* Revert back the hashtag on above the video title */
+    #title #super-title[hidden] {
         display: block i;
     }
 
